--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
         "e:\\OneDrive\\Desktop\\openjfx-22_windows-x64_bin-sdk\\javafx-sdk-22\\lib\\javafx.swing.jar",
         "e:\\OneDrive\\Desktop\\openjfx-22_windows-x64_bin-sdk\\javafx-sdk-22\\lib\\javafx.web.jar",
         "e:\\OneDrive\\Desktop\\openjfx-22_windows-x64_bin-sdk\\javafx-sdk-22\\lib\\javafx-swt.jar"
-    ]
+    ],
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
