--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,8 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "e:\\OneDrive\\Desktop\\openjfx-22_windows-x64_bin-sdk\\javafx-sdk-22\\lib\\javafx.base.jar",
-        "e:\\OneDrive\\Desktop\\openjfx-22_windows-x64_bin-sdk\\javafx-sdk-22\\lib\\javafx.controls.jar",
-        "e:\\OneDrive\\Desktop\\openjfx-22_windows-x64_bin-sdk\\javafx-sdk-22\\lib\\javafx.fxml.jar",
-        "e:\\OneDrive\\Desktop\\openjfx-22_windows-x64_bin-sdk\\javafx-sdk-22\\lib\\javafx.graphics.jar",
-        "e:\\OneDrive\\Desktop\\openjfx-22_windows-x64_bin-sdk\\javafx-sdk-22\\lib\\javafx.media.jar",
-        "e:\\OneDrive\\Desktop\\openjfx-22_windows-x64_bin-sdk\\javafx-sdk-22\\lib\\javafx.swing.jar",
-        "e:\\OneDrive\\Desktop\\openjfx-22_windows-x64_bin-sdk\\javafx-sdk-22\\lib\\javafx.web.jar",
-        "e:\\OneDrive\\Desktop\\openjfx-22_windows-x64_bin-sdk\\javafx-sdk-22\\lib\\javafx-swt.jar"
+        ".vscode\\lib\\javafx\\*.jar",
+        ".vscode\\lib\\icon\\*.jar"
     ],
     "java.configuration.updateBuildConfiguration": "interactive"
 }
