--- a/airline/pom.xml
+++ b/airline/pom.xml
@@ -10,6 +10,13 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
     <dependencies>
+
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>font-awsome</artifactId>
+            <version>4.7.0</version>
+        </dependency>
+        
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
