--- a/airline/pom.xml
+++ b/airline/pom.xml
@@ -1,22 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>airline</groupId>
+    <groupId>skyglide</groupId>
     <artifactId>airline</artifactId>
-    <version>1</version>
+    <version>0</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
     <dependencies>
-
-        <dependency>
-            <groupId>org.webjars.bower</groupId>
-            <artifactId>font-awsome</artifactId>
-            <version>4.7.0</version>
-        </dependency>
-        
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
@@ -48,7 +41,7 @@
                         <!-- Usage: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>airline.App</mainClass>
+                            <mainClass>skyglide.App</mainClass>
                         </configuration>
                     </execution>
                 </executions>
