--- a/airline/src/main/java/skyglide/.vscode/launch.json
+++ b/airline/src/main/java/skyglide/.vscode/launch.json
@@ -4,7 +4,15 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
+        {
+            "type": "java",
+            "name": "SkyGlide",
+            "request": "launch",
+            "mainClass": "SkyGlide",
+            "projectName": "Java_App_d607f52f",
+            "vmArgs": "--module-path \"D:\\JavaFX\\javafx-sdk-22\\lib\" --add-modules javafx.controls,javafx.fxml"
+            
+        },
         {
             "type": "java",
             "name": "Airline_Managment",
@@ -12,7 +20,6 @@
             "mainClass": "Airline_Managment",
             "projectName": "Java_App_2b2bc37e",
             "vmArgs": "--module-path \"D:\\JavaFX\\javafx-sdk-22\\lib\" --add-modules javafx.controls,javafx.fxml"
-        
         },
         {
             "type": "java",
